# ewcrr

./: .gitignore  bsjutils.py  pyproject.toml
models/: deep_equilibrium.py  lifting_conv.py  multi_conv.py  spline_autograd_func.py  spline_module.py  utils.py  wc_conv_net.py
training/: config.json  train.py
training/utils/: trainer.py  utils.py
