[project]
name = "ewcrr"
version = "0.1.0"
description = "Equivariant Weakly Convex Ridge Regularizers"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "opencv-python>=4.12.0.88",
    "scikit-image>=0.25.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.66.5",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }


[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
